update to deploy

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -28,5 +28,6 @@ services:
     env_file: .env
     volumes:
       - static_volume:/staticfiles
+      - media:/imgcat
     ports:
       - 9000:80
