--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -11,18 +11,23 @@ services:
     env_file: .env
     volumes:
       - pg_data_production:/var/lib/postgresql/data
+
   backend:
     image: odigvard/kittygram_backend
     env_file: .env
     volumes:
       - static_volume:/backend_static
       - media:/media
+    depends_on:
+      - db
+
   frontend:
     image: odigvard/kittygram_frontend
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
+
   gateway:
     image: odigvard/kittygram_gateway
     env_file: .env
@@ -31,3 +36,6 @@ services:
       - media:/imgcat
     ports:
       - 9000:80
+    depends_on:
+      - backend
+      - frontend
