--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -3,7 +3,7 @@ name: Main Kittygram workflow
 on:
   push:
     branches:
-      - main
+      - '*'
 
 jobs:
   tests:
@@ -62,6 +62,7 @@ jobs:
             context: ./backend/
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_backend:latest
+
   frontend_tests:
       runs-on: ubuntu-latest
 
@@ -81,6 +82,7 @@ jobs:
         run: |
           cd frontend/
           npm run test
+
   build_frontend_and_push_to_docker_hub:
       name: Push frontend Docker image to DockerHub
       runs-on: ubuntu-latest
@@ -101,6 +103,7 @@ jobs:
             context: ./frontend/
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_frontend:latest
+
   build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
     runs-on: ubuntu-latest
@@ -120,6 +123,7 @@ jobs:
           context: ./nginx/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_gateway:latest
+
   deploy:
     runs-on: ubuntu-latest
     needs: 
@@ -153,6 +157,7 @@ jobs:
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
           sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
@@ -162,4 +167,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Деплой успешно выполнен!
+        message: 'Деплой успешно выполнен! Автор коммита: ${{ github.actor }}, коммит: ${{ github.event.commits[0].message }}, https://github.com/${{ github.repository }}/commit/${{github.sha}}'
